<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_page_action_bar_height"
        android:background="@color/white">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/home_page_bar"
            android:contentDescription="@string/img_describe"/>
        <TextView
            android:id="@+id/tv_fragment_setting_org_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/home_page_margin_left"
            android:layout_marginTop="37dp"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/home_page_text_size_big" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_fragment_setting_org_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/home_page_margin_left"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:text="@string/app_sub_name"
            android:textColor="@color/home_page_org_sub_name_text_color"
            android:textSize="@dimen/home_page_text_size_small" />
        <TextView
            android:id="@+id/tv_fragment_setting_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="12dp"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_fragment_setting_account"
                style="@style/SettingFragment_item"
                android:drawableLeft="@mipmap/setting_account"
                android:text="@string/setting_account"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/recycler_view_item_division_color"/>
            <TextView
                android:id="@+id/tv_fragment_setting_password_update"
                style="@style/SettingFragment_item"
                android:drawableLeft="@mipmap/setting_password_update"
                android:text="@string/setting_password_update"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/recycler_view_item_division_color"/>
            <TextView
                android:id="@+id/tv_fragment_setting_sync"
                style="@style/SettingFragment_item"
                android:drawableLeft="@mipmap/setting_sync"
                android:text="@string/setting_sync"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/recycler_view_item_division_color"/>
            <TextView
                android:id="@+id/tv_fragment_setting_clear_data"
                style="@style/SettingFragment_item"
                android:drawableLeft="@mipmap/setting_clear_data"
                android:text="@string/setting_clear_data"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/recycler_view_item_division_color"/>
            <TextView
                android:id="@+id/tv_fragment_setting_check_for_updates"
                style="@style/SettingFragment_item"
                android:drawableLeft="@mipmap/setting_check_for_updates"
                android:text="@string/setting_check_for_updates"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/recycler_view_item_division_color"/>
            <TextView
                android:id="@+id/tv_fragment_setting_about_cloud_platform"
                style="@style/SettingFragment_item"
                android:drawableLeft="@mipmap/setting_about_cloud_platform"
                android:text="@string/setting_about_cloud_platform"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/recycler_view_item_division_color"/>
            <TextView
                android:id="@+id/tv_fragment_setting_share"
                style="@style/SettingFragment_item"
                android:drawableLeft="@mipmap/setting_share"
                android:text="@string/setting_share"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/recycler_view_item_division_color"/>
            <TextView
                android:id="@+id/tv_fragment_setting_sign_out"
                style="@style/SettingFragment_item"
                android:drawableLeft="@mipmap/setting_sign_out"
                android:text="@string/setting_sign_out"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/recycler_view_item_division_color"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>