<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_fragment_fragment_top"
        android:padding="10dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tv_dialog_sign_info_special_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="#333333"/>
        <ImageView
            android:id="@+id/iv_dialog_sign_info_special_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:src="@mipmap/close_blue" />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/ll_dialog_sign_info_eat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_sign_info_type"
                    android:textColor="@color/black" />
                <CheckBox
                    android:id="@+id/cb_dialog_sign_info_breakfast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:button="@null"
                    android:drawableLeft="@drawable/check_box_selector"
                    android:drawablePadding="1dp"
                    android:text="@string/dialog_sign_info_breakfast"
                    android:textColor="@color/black" />
                <CheckBox
                    android:id="@+id/cb_dialog_sign_info_lunch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:button="@null"
                    android:drawableLeft="@drawable/check_box_selector"
                    android:drawablePadding="1dp"
                    android:text="@string/dialog_sign_info_lunch"
                    android:textColor="@color/black" />
                <CheckBox
                    android:id="@+id/cb_dialog_sign_info_dinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:button="@null"
                    android:drawableLeft="@drawable/check_box_selector"
                    android:drawablePadding="1dp"
                    android:text="@string/dialog_sign_info_dinner"
                    android:textColor="@color/black" />
                <CheckBox
                    android:id="@+id/cb_dialog_sign_info_all"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:button="@null"
                    android:drawableLeft="@drawable/check_box_selector"
                    android:drawablePadding="1dp"
                    android:text="@string/dialog_sign_info_select_all"
                    android:textColor="@color/black" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/recycler_view_item_division_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dialog_sign_info_food_intake"
                    android:textColor="@color/black" />
                <RadioGroup
                    android:id="@+id/rg_dialog_sign_info_eat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >
                    <RadioButton
                        android:id="@+id/dialog_sign_info_food_intake_less"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:background="#00000000"
                        android:drawableLeft="@drawable/radio_button_selector"
                        android:drawablePadding="6dp"
                        android:text="@string/dialog_sign_info_food_intake_less"
                        android:textColor="@color/black" />
                    <RadioButton
                        android:id="@+id/dialog_sign_info_food_intake_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:button="@null"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:background="#00000000"
                        android:drawableLeft="@drawable/radio_button_selector"
                        android:drawablePadding="6dp"
                        android:checked="true"
                        android:text="@string/dialog_sign_info_food_intake_normal"
                        android:textColor="@color/black" />
                    <RadioButton
                        android:id="@+id/dialog_sign_info_food_intake_excessive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:background="#00000000"
                        android:drawableLeft="@drawable/radio_button_selector"
                        android:drawablePadding="6dp"
                        android:text="@string/dialog_sign_info_food_intake_excessive"
                        android:textColor="@color/black" />
                </RadioGroup>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/recycler_view_item_division_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/dialog_sign_info_remarks"
                    android:textColor="@color/black" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >
                    <CheckBox
                        android:id="@+id/cb_dialog_sign_info_snacks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:background="#00000000"
                        android:button="@null"
                        android:drawableLeft="@drawable/check_box_selector"
                        android:drawablePadding="6dp"
                        android:text="@string/dialog_sign_info_snacks"
                        android:textColor="@color/black" />
                    <CheckBox
                        android:id="@+id/cb_dialog_sign_info_mood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:background="#00000000"
                        android:button="@null"
                        android:drawableLeft="@drawable/check_box_selector"
                        android:drawablePadding="6dp"
                        android:text="@string/dialog_sign_info_mood"
                        android:textColor="@color/black" />
                    <CheckBox
                        android:id="@+id/cb_dialog_sign_info_disease"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="1dp"
                        android:paddingRight="1dp"
                        android:background="#00000000"
                        android:button="@null"
                        android:drawableLeft="@drawable/check_box_selector"
                        android:drawablePadding="6dp"
                        android:text="@string/dialog_sign_info_disease"
                        android:textColor="@color/black" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/dialog_sign_info_other"
                            android:textColor="@color/black" />
                        <EditText
                            android:id="@+id/et_dialog_sign_info_remarks_add"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/dialog_sign_info_remarks_add"
                            android:textColorHint="#9FAFB6"
                            android:textSize="16sp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rl_dialog_sign_info_sleep"
            android:layout_width="match_parent"
            android:layout_height="248dp">
            <RadioGroup
                android:id="@+id/rg_dialog_sign_info_sleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" >
                <RadioButton
                    android:id="@+id/dialog_sign_info_sleep_deep"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:button="@null"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/radio_button_selector"
                    android:drawablePadding="6dp"
                    android:checked="true"
                    android:text="@string/dialog_sign_info_sleep_deep"
                    android:textColor="@color/black" />
                <RadioButton
                    android:id="@+id/dialog_sign_info_sleep_shallow"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:button="@null"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/radio_button_selector"
                    android:drawablePadding="6dp"
                    android:text="@string/dialog_sign_info_sleep_shallow"
                    android:textColor="@color/black" />
                <RadioButton
                    android:id="@+id/dialog_sign_info_sleepiness"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:button="@null"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/radio_button_selector"
                    android:drawablePadding="6dp"
                    android:text="@string/dialog_sign_info_sleepiness"
                    android:textColor="@color/black" />
                <RadioButton
                    android:id="@+id/dialog_sign_info_lethargy"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:button="@null"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/radio_button_selector"
                    android:drawablePadding="6dp"
                    android:text="@string/dialog_sign_info_lethargy"
                    android:textColor="@color/black" />
                <RadioButton
                    android:id="@+id/dialog_sign_info_coma"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:button="@null"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/radio_button_selector"
                    android:drawablePadding="6dp"
                    android:text="@string/dialog_sign_info_coma"
                    android:textColor="@color/black" />
                <RadioButton
                    android:id="@+id/dialog_sign_info_consciousness_fuzzy"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:button="@null"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/radio_button_selector"
                    android:drawablePadding="6dp"
                    android:text="@string/dialog_sign_info_consciousness_fuzzy"
                    android:textColor="@color/black" />
                <RadioButton
                    android:id="@+id/dialog_sign_info_other"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:button="@null"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/radio_button_selector"
                    android:drawablePadding="6dp"
                    android:text="@string/dialog_sign_info_other"
                    android:textColor="@color/black" />
            </RadioGroup>
            <EditText
                android:id="@+id/et_dialog_sign_info_other"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="70dp"
                android:background="@null"
                android:hint="手动输入睡眠质量"
                android:textColorHint="#9FAFB6"
                android:paddingLeft="5dp"
                android:textSize="16sp"
                android:visibility="gone"/>
        </RelativeLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@drawable/dialog_fragment_fragment_bottom">
        <TextView
            android:id="@+id/tv_dialog_sign_info_special_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/btn_background_radius_selector"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:padding="6dp"
            android:text="确定"
            android:textColor="@drawable/btn_text_color_selector"/>
    </LinearLayout>
</LinearLayout>