<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_account_name"
            android:textColor="#333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_activity_setting_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:hint="用户名最长为20位"
            android:maxLength="20"
            android:textSize="16sp"
            android:textColor="#333333"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/recycler_view_item_division_color" />

    <TextView
        android:id="@+id/tv_activity_setting_account_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="14dp"
        android:text="@string/setting_account_phone"
        android:textColor="@color/text_color_normal"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/recycler_view_item_division_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="14dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_activity_setting_account_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_account_email"
            android:textColor="@color/text_color_normal"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_activity_setting_account_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:maxLength="20"
            android:textSize="16sp"
            android:textColor="#333333"/>
    </LinearLayout>
    
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/btn_dialog_nursing_info_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/btn_background_radius_selector"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:padding="8dp"
        android:text="@string/btn_confirm"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@drawable/btn_text_color_selector"/>

</LinearLayout>